need to change according to the git

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>ProductDeck</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 
   <!-- fonts  -->
   <script src="https://kit.fontawesome.com/d2fbcc16ae.js" crossorigin="anonymous"></script>
@@ -67,7 +67,7 @@
         </div>
 
         <div class="col-lg-6">
-          <img class="rotated " src="image/iph.png" alt="iphone-mockup">
+          <img class="rotated " src="iph.png" alt="iphone-mockup">
         </div>
 
       </div>
@@ -111,12 +111,12 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <h2>I no longer have to search for the products that I need. I've found the best EarBuds at low cost.</h2>
-          <img class="testimonials-image" src="image/lady-img.jpg" alt="dog-profile">
+          <img class="testimonials-image" src="lady-img.jpg" alt="dog-profile">
           <em>Rohit, kota</em>
         </div>
         <div class="carousel-item">
           <h2 class="testimonial-text">I wanted to sell my Laptop . It was kind of difficult for me but with ProductDeck help, i have found the best buyer.</h2>
-          <img class="testimonials-image" src="image/lady-img.jpg" alt="lady-profile">
+          <img class="testimonials-image" src="lady-img.jpg" alt="lady-profile">
           <em>Diya , Bhopal </em>
         </div>
 
@@ -140,10 +140,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-logo" src="image/techcrunch.png" alt="tc-logo">
-    <img class="press-logo" src="image/tnw.png" alt="tnw-logo">
-    <img class="press-logo" src="image/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-logo" src="image/mashable.png" alt="mashable-logo">
+    <img class="press-logo" src="techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="mashable.png" alt="mashable-logo">
 
   </section>
 
@@ -163,7 +163,7 @@
             <h3>kids Section</h3>
           </div>
           <div class="card-body">
-            <img class="mo1" src="image/kid.png" alt="">
+            <img class="mo1" src="kid.png" alt="">
             <button type="button " class="btn btn-lg btn-block btn-outline-dark" ><a href="kids.html">Check Out</a></button>
           </div>
         </div>
@@ -174,7 +174,7 @@
             <h3>Womens Section</h3>
           </div>
           <div class="card-body">
-            <img class="mo1" src="image/lad2.png" alt="">
+            <img class="mo1" src="lad2.png" alt="">
             
             <button type="button" class="btn btn-lg btn-block btn-outline-dark" ><a href="womens.html">Check Out</a></button>
           </div>
@@ -188,7 +188,7 @@
             <h3>Mens Section</h3>
           </div>
           <div class="card-body">
-            <img class="mo1" src="image/man3.png" alt="">
+            <img class="mo1" src="man3.png" alt="">
             <button type="button" class="btn btn-lg btn-block btn-outline-dark" ><a href="mens.html">Check Out</a></button>
           </div>
   
