changes in the css files

--- a/kids.html
+++ b/kids.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/kids.css">
+    <link rel="stylesheet" href="kids.css">
 
     <!-- fonts  -->
     <script src="https://kit.fontawesome.com/d2fbcc16ae.js" crossorigin="anonymous"></script>
@@ -53,7 +53,7 @@
                         <h3>Play Gyms For Kids </h3>
                     </div>
                     <div  class="card-body">
-                       <center> <img  class="mo1" src="image/playgym.jpg" alt=""></center>
+                       <center> <img  class="mo1" src="playgym.jpg" alt=""></center>
                         <p>Original Price:-8972 Rs </p>
                         <p>You Can Get it at :-4000 Rs</p>
                         <p>You are Saving :-4972 </p>
@@ -69,7 +69,7 @@
                     </div>
                     <div class="card-body">
 
-                        <center><img class="mo1" src="image/miko.jpg" alt=""></center>
+                        <center><img class="mo1" src="miko.jpg" alt=""></center>
                         <p>Original Price 16909 Rs</p>
                         <p>You can Get it at :-12000 Rs</p>
                         <p>You are Saving :-4909</p>
@@ -86,7 +86,7 @@
                         <h3>Star and Daisy BathTub</h3>
                     </div>
                     <div class="card-body">
-                        <center><img class="mo1" src="image/bath1.jpg" alt=""></center>
+                        <center><img class="mo1" src="bath1.jpg" alt=""></center>
                         <p>Original Price 9999 Rs</p>
                         <p>You can Get it at :-4000Rs</p>
                         <p>You are Saving :-5999</p>
