changes in the css files

--- a/mens.html
+++ b/mens.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/kids.css">
+    <link rel="stylesheet" href="kids.css">
 
     <!-- fonts  -->
     <script src="https://kit.fontawesome.com/d2fbcc16ae.js" crossorigin="anonymous"></script>
@@ -56,7 +56,7 @@
                         <h3>Tripod For DSLR </h3>
                     </div>
                     <div class="card-body">
-                        <center><img class="mo1" src="image/tri1.jpg" alt=""></center>
+                        <center><img class="mo1" src="tri1.jpg" alt=""></center>
                         <p>Original Price:-6000 Rs </p>
                         <p>You Can Get it at :-4000 Rs</p>
                         <p>You are Saving :-2000 </p>
@@ -72,7 +72,7 @@
                     </div>
                     <div class="card-body">
 
-                        <center><img class="mo1" src="image/xbox1.jpg" alt=""></center>
+                        <center><img class="mo1" src="xbox1.jpg" alt=""></center>
                         <p>Original Price 31000 Rs</p>
                         <p>You can Get it at :-27000 Rs</p>
                         <p>You are Saving :-4000</p>
@@ -89,7 +89,7 @@
                         <h3>Air Jordan 1 Retro</h3>
                     </div>
                     <div class="card-body">
-                        <center><img class="mo1" src="image/jordan.jpg" alt=""></center>
+                        <center><img class="mo1" src="jordan.jpg" alt=""></center>
                         <p>Original Price 42999 Rs</p>
                         <p>You can Get it at :-32000 Rs</p>
                         <p>You are Saving :-10999</p>
