--- a/womens.html
+++ b/womens.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/kids.css">
+    <link rel="stylesheet" href="kids.css">
 
     <!-- fonts  -->
     <script src="https://kit.fontawesome.com/d2fbcc16ae.js" crossorigin="anonymous"></script>
@@ -55,7 +55,7 @@
                     </div>
                     <div class="card-body">
                         
-                        <center><img class="mo1" src="image/salawar.jpg" alt=""> </center>
+                        <center><img class="mo1" src="salawar.jpg" alt=""> </center>
                         <p>Original Price:-2899 Rs </p>
                         <p>You Can Get it at :-2500Rs</p>
                         <p>You are Saving :-399 </p>
@@ -71,7 +71,7 @@
                     </div>
                     <div class="card-body">
 
-                        <center><img class="mo1" src="image/hair.jpg" alt=""></center>
+                        <center><img class="mo1" src="hair.jpg" alt=""></center>
                         <p>Original Price 33900 Rs</p>
                         <p>You can Get it at :-27000 Rs</p>
                         <p>You are Saving :-6900</p>
@@ -88,7 +88,7 @@
                         <h3>Prada Bag</h3>
                     </div>
                     <div class="card-body">
-                        <center><img class="mo1" src="image/prda.jpg" alt=""></center>
+                        <center><img class="mo1" src="prda.jpg" alt=""></center>
                         <p>Original Price 15500 Rs</p>
                         <p>You can Get it at :-10000 Rs</p>
                         <p>You are Saving :-5500</p>
