change in line 217

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
   <section id="cta">
 
-    <h3>Try the app and Let us help us to help you.</h3>
+    <h3>Try the app and Give us a chance to help you.</h3>
     <button type="button" class="btn btn-dark btn-lg down-btn " > <i class="fab fa-apple"></i> Download</button>
     <button type="button" class="btn btn-outline-light btn-lg down-btn " ><i class="fab fa-google-play"></i> Download</button>
 
